--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "alice-carousel": "^0.0.1",
     "bootstrap": "^5.3.1",
     "cuid": "^3.0.0",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.66.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
